[package]
name = "open-feature"
version = "0.2.7"
edition = "2021"
rust-version = "1.71.1" # MSRV
description = "The official OpenFeature Rust SDK."
documentation = "https://docs.rs/open-feature"
readme = "README.md"
homepage = "https://openfeature.dev/"
repository = "https://github.com/open-feature/rust-sdk"
license = "Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
lazy_static = "1.5"
mockall = { version = "0.13.0", optional = true }
serde_json = { version = "1.0.116", optional = true }
time = "0.3.36"
tokio = { version = "1.40", features = ["full"] }
typed-builder = "0.22.0"

log = { package = "log", version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
structured-logger = "1.0.3"
spec = { path = "spec" }

[features]
default = ["test-util", "dep:log"]
test-util = ["dep:mockall"]
serde_json = ["dep:serde_json"]
structured-logging = ["log?/kv"]
